# max-mcp-server

./: .gitignore  .mcp.json  .mcpbignore  0  GUIDE.md  README.md  claude_desktop_config.example.json  manifest.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
max/: chat.config.example.json  chat.js  dump.js  index.html  mcp_host.maxpat  package.json
maxmsp_mcp/: __init__.py  extensions.py  guide.py  operations.py  patch_state.py  server.py  templates.py  transport.py
skills/maxmsp/: SKILL.md
tests/: test_roundtrip.py
tools/: build_maxref_db.py
