[project]
name = "maxmsp-mcp"
version = "0.1.0"
description = "Build and drive Max/MSP patches from Claude - OSC-over-UDP MCP server + skill (thispatcher dynamic patching, no externals, no mxj)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Julien Bayle" }]
keywords = ["max", "maxmsp", "mcp", "thispatcher", "osc", "music", "audio"]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
maxmsp-mcp = "maxmsp_mcp.server:main"

[project.urls]
Homepage = "https://structure-void.com"
Source = "https://github.com/gluon/max-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maxmsp_mcp"]
